--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@capacitor/core": "2.4.7",
     "@capacitor/ios": "^2.4.7",
     "@ionic-native/core": "^5.31.1",
+    "@ionic-native/health": "^5.31.1",
     "@ionic-native/pedometer": "^5.31.1",
     "@ionic-native/stepcounter": "^5.31.1",
     "@ionic/angular": "^5.6.3",
     "@ionic/pwa-elements": "^3.0.2",
+    "cordova-plugin-health": "^2.0.0",
     "cordova-plugin-pedometer": "^0.4.1",
     "cordova-plugin-stepcounter": "^1.0.1",
     "rxjs": "~6.6.7",
