--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "@types/three": "^0.126.2",
     "rxjs": "~6.6.0",
+    "three": "^0.126.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
