--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@ionic-native/stepcounter": "^5.31.1",
     "@ionic/angular": "^5.6.3",
     "@ionic/pwa-elements": "^3.0.2",
+    "@types/three": "^0.127.0",
     "cordova-plugin-health": "^2.0.0",
     "cordova-plugin-pedometer": "^0.4.1",
     "cordova-plugin-stepcounter": "^1.0.1",
     "rxjs": "~6.6.7",
+    "three": "^0.127.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
