--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "ios": "ionic build && ionic cap copy && ionic cap sync && ionic cap open ios"
+    "ios": "ionic build && ionic cap copy && ionic cap sync && ionic cap open ios",
+    "android": "ionic build && ionic cap copy && ionic cap sync && ionic cap open android"
   },
   "private": true,
   "dependencies": {
